# CA_HW1

./: Пояснительная записка.docx
output/: out1.txt  out2.txt  out3.txt  out4.txt  out5.txt
task255/: CMakeLists.txt  ball.cpp  ball.h  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  tetrahedron.cpp  tetrahedron.h
